fix: проработал все замечания, кроме использования интерфейса из мастера. После коммита подтяну и доделаю.